# RobertOS

./: CMakeLists.txt  README.md  robertos_init.cmake
arch/stm32f4/: CMakeLists.txt
arch/stm32f4/boot/: system_stm32f4xx.c
arch/stm32f4/gpio/: gpio.c
arch/stm32f4/spi/: spi.c
dummy_main/: CMakeLists.txt
include/io/: gpio.h
kernel/: time.c
kernel/sched/: sched.c
